dev-service.yml
apiVersion: v1
kind: Service
metadata:
    name: dev-service

spec:
    type: ClusterIP
    ports:
        - targetPort: 8000
          port: 80
    selector:
       name: dev
       app: flask-rest
