prod-service.yml
apiVersion: v1
kind: Service
metadata:
    name: prod-service

spec:
    type: NodePort
    ports:
        - targetPort: 8000
          port: 80
          nodePort: 30000
    selector:
       name: prod
       app: flask-rest
