qa-service.yml
apiVersion: v1
kind: Service
metadata:
    name: qa-service

spec:
    type: NodePort
    ports:
        - targetPort: 8000
          port: 80
          nodePort: 30002
    selector:
       name: qa
       app: flask-rest
