ingress.yml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  tls:
    - secretName: flask-com-tls
      hosts:
        - flask-app.com
        - dev.flask-app.com
  rules:
    - host: flask-app.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: prod-service
                port:
                  number: 80
    - host: dev.flask-app.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: dev-service
                port:
                  number: 80
