prod-ingress.yml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
spec:
  tls:
    - secretName: flask-app-com-tls
      hosts:
        - flask-app.com
  rules:
    - host: flask-app.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: prod-service
                port:
                  number: 80
